# campus-violence-detection

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  Makefile  PROJECT_FILES_MANIFEST.txt  README.md  environment_tf210_py39.yml  pyproject.toml  requirements.txt  requirements_tf210.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-check.yml
assets/: README.md
configs/: default.yaml
dataset/: README.md
docs/: DESIGN_NOTES.md  EXPERIMENT_REPORT.md  RESULTS_GUIDE.md  dataset.md  git_lfs.md  kunpeng_pro_deployment.md  release_assets.md
fixed_videos/: README.md
frames/: README.md
logs/: README.md
models/: README.md
results/: README.md  example_metrics.json  example_output.txt  predict_examples.txt  train_result.txt
scripts/: check_dataset.py  extract_frames.py  fix_videos.py  predict_examples_windows.bat  predict_image.py  predict_tflite.py  predict_video.py  run_pipeline_windows.bat  train.py
src/: 01_fix_videos.py  02_extract_frames.py  03_check_dataset.py  04_train_model.py  05_predict_video.py  ffmpeg_utils.py
src/violence_detection/: data.py  model.py  paths.py  predict.py  tflite_predict.py  train.py  video_tools.py
tests/: test_data_count.py  test_paths.py
