[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-violence-detection"
version = "0.3.0"
description = "Campus violence video detection pipeline based on frame extraction and MobileNetV2."
readme = "README.md"
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
authors = [{name = "Campus Violence Detection contributors"}]

[tool.setuptools.packages.find]
where = ["src"]
